--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,6 @@
 body, html {
   height: 100%;
+  max-width: 100vw;
   margin: 0;
   font-family: Arial, sans-serif;
   background-color: #18171a;
@@ -44,17 +45,19 @@ body, html {
 }
 
 .container {
-  display: flex;
+  display: grid;
   justify-content: space-between;
-  padding: 20px;
   height: calc(100% - 90px); /* Adjusted for navbar */
   box-sizing: border-box;
+  width: 100%;
 }
 .stream-grid {
-  flex-grow: 1;
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row: 2;
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 1rem;
   overflow-y: auto; /* Make it scrollable */
   padding-right: 10px;
   align-content:flex-start;
@@ -81,15 +84,31 @@ body, html {
   display: block;
 }
 .stream .embed-container {
-  width:38vw;
+  width:42vw;
   display: block;
-  height: 21.55vw;
+  height: 23.6vw;
 }
 .stream .stream-controls {
   display: block;
 }
 
+.stream .watching-embed-container {
+  width:21vw;
+  display: block;
+  height: 12.3vw;
+}
+
+.watching-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  overflow-y: auto;
+  align-content:flex-start;
+}
+
 .sidebar {
+  grid-column: 2;
+  grid-row: 2;
   width: fit-content;
   min-width: 250px;
   margin: 10;
@@ -151,28 +170,6 @@ input[type="text"] {
   animation-name: slideUp;
   animation-duration: 1s;
   animation-fill-mode: forwards;
-}
-
-@keyframes slideDown {
-  from {
-      transform: translateY(-100%);
-      opacity: 0;
-  }
-  to {
-      transform: translateY(0);
-      opacity: 1;
-  }
-}
-
-@keyframes slideUp {
-  from {
-      transform: translateY(0%);
-      opacity: 1;
-  }
-  to {
-      transform: translateY(-100%);
-      opacity: 0;
-  }
 }
 
 
@@ -289,5 +286,37 @@ display: none;
   display: block;
 }
 
+#whos-online {
+  grid-row: 1;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  max-width: 100vw;
+  margin-bottom: 1rem;
+  background-color: #201824;
+}
 
+#whos-online-title {
+  font-size:x-large;
+  color: #777879;
+  margin: 1rem;
+}
 
+.whos-online-grid {
+  grid-column: 1;
+  display: flex;
+  height: 4rem;
+  overflow-x: scroll;
+  padding-bottom: 1rem;
+}
+
+.whos-online-channel {
+  color: #777879;
+  border: 1px solid #a3a3a3; /* Light grey border */
+  padding: 10px; /* Padding inside the border */
+  cursor: pointer; /* Change cursor to pointer to indicate clickable */
+  background-color: #181818; /* Light background color */
+  text-align: center; /* Center the text */
+  border-radius: 5px; /* Rounded corners for the border */
+  flex: 0 0 auto;
+  margin: .30rem;
+}
