--- a/public/styles.css
+++ b/public/styles.css
@@ -89,20 +89,46 @@ body, html {
   font-size: 1em;
   color:#c5c5c5;
   margin: 2px;
+  white-space: nowrap;  /* Prevent text from wrapping to the next line */
+  overflow: hidden;     /* Hide overflow */
+  text-overflow: ellipsis; /* Indicate that text is clipped (optional) */
+  width: 100%;  
+}
+.stream .stream-title:hover::after {
+  content: '';
+  position: absolute;
+  animation: scroll-text 10s linear infinite;
+  left: 100%;
+}
+
+@keyframes scroll-text {
+  from { transform: translateX(0); }
+  to { transform: translateX(-100%); }
 }
 .stream .embed-container {
-  width:42vw;
+  width:25vw;
   display: block;
-  height: 23.6vw;
+  height: 14.1vw;
 }
+
+.stream .stream-title-video-container {
+  width:25vw;
+  height: 14.1vw;
+}
+
 .stream .stream-controls {
   display: block;
 }
 
 .stream .watching-embed-container {
-  width:21vw;
+  width:25vw;
   display: block;
-  height: 12.3vw;
+  height: 14.1vw;
+}
+
+.stream .watching-title-video-container {
+  width:25vw;
+  height: 14.1vw;
 }
 
 .watching-grid {
@@ -160,17 +186,24 @@ input[type="text"] {
   animation-fill-mode: forwards; /* Keeps the element in the final state after the animation */
   width: 100%;
   flex-direction: column;
-  margin-bottom: 20px;
+  /*margin-bottom: 20px;*/
   justify-content: center;
+  resize: vertical;
+  /*border-bottom: 10px solid black;*/
+  overflow: auto;
+  scrollbar-width: 0px;
+  overflow-y: hidden;
+  
 }
 .main-stream {
   width: 100%;
-  height: 100vh; /* Larger size for main stream */
-  margin-bottom: 10px;
+  height: 100%; /* Larger size for main stream */
+  /*min-height: 40rem; */
 }
 .stream-main {
   width: 100%;
   height: 100%;
+  /*min-height: 40rem; */
 }
 .main-stage.hide {
   animation-name: slideUp;
@@ -239,7 +272,9 @@ display: none;
   background-color: #2d2931;
   cursor: pointer;
   image-resolution: 100,40;
-  display: block;
+  display: hidden;
+  /*left: 50%; /* Center horizontally */
+  /*transform: translateX(-50%); /* Center align */
 } 
 
 
